Use G1